# okf-tools

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
src/okf_tools/: __init__.py  cli.py  indexer.py  lint.py  migrate.py  parser.py  validate.py
tests/: test_okf.py
